Add Nav Routing for Create-Post

--- a/client/src/components/Profile/CreatePost.css
+++ b/client/src/components/Profile/CreatePost.css
@@ -3,7 +3,7 @@
   border-radius: 10px;
   background-color: gainsboro;
   width: 500px;
-  margin: 25px auto;
+  margin: 80px auto 0;
   padding: 25px;
 }
 
