--- a/client/src/components/Login/LoginPage.css
+++ b/client/src/components/Login/LoginPage.css
@@ -7,3 +7,7 @@
     margin: 80px auto 0;
     padding: 25px;
 }
+
+.bg-images {
+background-image: url('https://images.unsplash.com/photo-1560518883-ce09059eeffa?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1073&q=80');
+}
