--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -34,8 +34,21 @@ header .overlay{
 .navbar-nav{
     font-size: larger;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
+
+.navSection {
+    display: flex;
+    width: 85%;
+    justify-content: space-between;
+    
+}
+
+.navPart {
+    display: flex;
+    
+}
+
 h1 {
 	font-size: 80px;
 	margin-bottom: 30px;
@@ -44,6 +57,17 @@ h1 {
 h3, p {
 	font-family: 'Open Sans', sans-serif;
 	margin-bottom: 30px;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+    margin-right: 20px;
+}
+
+a:hover {
+    color:rgba(0, 0, 0, 0.65);
+    text-decoration: none;
 }
 .mask{
 width: 100%;
